--- a/index.html
+++ b/index.html
@@ -5,25 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gradu Amaierako Lana</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
+
 </head>
+
 <body>
     <!-- Navbar -->
     <nav class="navbar navbar-light bg-light">
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#sidebarMenu">
+        <button class="navbar-toggler" id="toggleSidebar">
             <span class="navbar-toggler-icon"></span>
         </button>
         <span class="navbar-text">GrAL lana</span>
     </nav>
+    
 
-    <!-- Sidebar Menu -->
-    <div class="collapse" id="sidebarMenu">
-        <div class="bg-light border-right" id="sidebar-wrapper">
-            <div class="list-group list-group-flush">
-                <a href="#" class="list-group-item list-group-item-action">Informazio Orokorra</a>
-                <a href="#" class="list-group-item list-group-item-action">Ingeniaritza Informatikoa</a>
-                <a href="#" class="list-group-item list-group-item-action">Adimen Artifiziala</a>
-                <a href="#" class="list-group-item list-group-item-action">About Us</a>
-            </div>
+    <!-- Sidebar -->
+    <div id="sidebar">
+        <span class="close-btn">&times;</span>
+        <div class="list-group list-group-flush">
+            <a href="#" class="list-group-item list-group-item-action">Informazio Orokorra</a>
+            <a href="#" class="list-group-item list-group-item-action">Ingeniaritza Informatikoa</a>
+            <a href="#" class="list-group-item list-group-item-action">Adimen Artifiziala</a>
+            <a href="#" class="list-group-item list-group-item-action">About Us</a>
         </div>
     </div>
 
@@ -33,8 +38,12 @@
         <p>...</p>
         <h4>Zer ikasten duzu?</h4>
         <div class="d-flex justify-content-center">
-            <button class="btn btn-outline-primary m-2">Ingeniaritza Informatikoa</button>
-            <button class="btn btn-outline-primary m-2">Adimen Artifiziala</button>
+            <button class="btn btn-outline-primary m-2">
+                <i class="fas fa-laptop-code"></i> Ingeniaritza Informatikoa
+            </button>
+            <button class="btn btn-outline-primary m-2">
+                <i class="fas fa-robot"></i> Adimen Artifiziala
+            </button>
         </div>
     </div>
 
@@ -42,5 +51,6 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="js/scripts.js"></script>
 </body>
 </html>
