--- a/index.html
+++ b/index.html
@@ -33,19 +33,19 @@
     </div>
 
     <!-- Main Content -->
-    <div class="container text-center mt-4">
-        <h3>Zer da GrAL bat?</h3>
-        <p>...</p>
-        <h4>Zer ikasten duzu?</h4>
-        <div class="d-flex justify-content-center">
-            <button class="btn btn-outline-primary m-2">
-                <i class="fas fa-laptop-code"></i> Ingeniaritza Informatikoa
-            </button>
-            <button class="btn btn-outline-primary m-2">
-                <i class="fas fa-robot"></i> Adimen Artifiziala
-            </button>
-        </div>
+<div class="content container text-center mt-4">
+    <h3>Zer da GrAL bat?</h3>
+    <p>...</p>
+    <h4>Zer ikasten duzu?</h4>
+    <div class="d-flex justify-content-center">
+        <button class="btn btn-outline-primary m-2">
+            <i class="fas fa-laptop-code"></i> Ingeniaritza Informatikoa
+        </button>
+        <button class="btn btn-outline-primary m-2">
+            <i class="fas fa-robot"></i> Adimen Artifiziala
+        </button>
     </div>
+</div>
 
     <!-- Bootstrap JavaScript -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
