--- a/pages/ing_informatikoa.html
+++ b/pages/ing_informatikoa.html
@@ -9,6 +9,8 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
+
 </head>
 <body>
     <!-- Navbar -->
@@ -28,6 +30,12 @@
             <a href="../pages/informazio_orokorra.html" class="list-group-item list-group-item-action">Informazio Orokorra</a>
             <a href="ingeniaritza-informatikoa.html" class="list-group-item list-group-item-action active">Ingeniaritza Informatikoa</a>
             <a href="../pages/inteligentzia_artifiziala.html" class="list-group-item list-group-item-action">Inteligentzia Artifiziala</a>
+        </div>
+        <div class="list-group list-group-flush mt-auto">
+            <a href="about.html" class="list-group-item list-group-item-action">About Us</a>
+            <a href="../index.html" class="list-group-item list-group-item-action">
+                <i class="fas fa-home"></i> 
+            </a>
         </div>
     </div>
 
