--- a/pages/about.html
+++ b/pages/about.html
@@ -70,7 +70,7 @@
                 <img src="../img/irantzu.png" class="rounded-circle mr-3" alt="Profile" width="60">
                 <div>
                     <h5 class="mb-1">Irantzu Loero</h5>
-                    <p style="text-align: justify;">Irantzu Loeno Euskal Herriko Unibertsitateko Ingeniaritza
+                    <p style="text-align: justify;">Irantzu Loero Euskal Herriko Unibertsitateko Ingeniaritza
                         Informatikoko ikaslea da. UX/UI diseinu interaktiboan eta garapenean interesa dauka. Bere lanek
                         beti erabiltzailearen esperientziaren hobekuntza dute helburu. Hainbat ekitalditan parte hartu
                         du, eta bere sormenak eta zehaztasunak proiektu askotan lagundu dute.</p>
