--- a/pages/ing_informatikoa.html
+++ b/pages/ing_informatikoa.html
@@ -80,57 +80,57 @@
                         <tr>
                             <td>
                                 <div>
-                                    <a href="#https://addi.ehu.es/bitstream/handle/10810/21808/TFG_TeixeiraMartin.pdf?sequence=1&isAllowed=y"
+                                    <a href="https://addi.ehu.es/bitstream/handle/10810/21808/TFG_TeixeiraMartin.pdf?sequence=1&isAllowed=y"
                                         class="main-link">Integración del algoritmo CHAID</a>
                                 </div>
                                 <div>
-                                    <a href="#https://addi.ehu.es/bitstream/handle/10810/15919/NFC%20Parking%20Payment%20System.pdf?sequence=1&isAllowed=y"
+                                    <a href="https://addi.ehu.es/bitstream/handle/10810/15919/NFC%20Parking%20Payment%20System.pdf?sequence=1&isAllowed=y"
                                         class="main-link">NFC Parking payment system</a>
                                 </div>
                                 <div>
-                                    <a href="#https://addi.ehu.es/bitstream/handle/10810/13358/TrustedPals-KBP-Dokumentazioa.pdf?sequence=1&isAllowed=y"
+                                    <a href="https://addi.ehu.es/bitstream/handle/10810/13358/TrustedPals-KBP-Dokumentazioa.pdf?sequence=1&isAllowed=y"
                                         class="main-link">TrustedPals plataformarako middlewarearen inplementazioa eta
                                         simulazioa</a>
                                 </div>
                                 <div>
-                                    <a href="#https://addi.ehu.es/handle/10810/13141" class="small-link">Adibide
+                                    <a href="https://addi.ehu.es/handle/10810/13141" class="small-link">Adibide
                                         gehiago</a>
                                 </div>
                             </td>
                             <td>
                                 <div>
-                                    <a href="#https://addi.ehu.es/bitstream/handle/10810/15923/NXT_ROS_memoria.pdf?sequence=4&isAllowed=y"
+                                    <a href="https://addi.ehu.es/bitstream/handle/10810/15923/NXT_ROS_memoria.pdf?sequence=4&isAllowed=y"
                                         class="main-link">NXT eta ROS bidezko zabor bilatzailea</a>
                                 </div>
                                 <div>
-                                    <a href="#Procesamiento de imagenes satelitales multiespectrales"
+                                    <a href="https://addi.ehu.es/bitstream/handle/10810/13361/MemoriaPFC.pdf?sequence=1&isAllowed=y"
                                         class="main-link">Procesamiento de imagenes satelitales multiespectrales</a>
                                 </div>
                                 <div>
-                                    <a href="#https://addi.ehu.es/bitstream/handle/10810/13360/Memoria_Mikel_Del_Valle_Iriondo.pdf?sequence=2&isAllowed=y"
+                                    <a href="https://addi.ehu.es/bitstream/handle/10810/13360/Memoria_Mikel_Del_Valle_Iriondo.pdf?sequence=2&isAllowed=y"
                                         class="main-link">Herramienta de creación de modelos STL parametrizables
                                         mediante Processing</a>
                                 </div>
                                 <div>
-                                    <a href="#https://addi.ehu.es/handle/10810/13142/recent-submissions"
+                                    <a href="https://addi.ehu.es/handle/10810/13142/recent-submissions"
                                         class="small-link">Adibide gehiago</a>
                                 </div>
                             </td>
                             <td>
                                 <div>
-                                    <a href="#https://addi.ehu.es/bitstream/handle/10810/15918/Memoria_completa.pdf?sequence=3&isAllowed=y"
+                                    <a href="https://addi.ehu.es/bitstream/handle/10810/15918/Memoria_completa.pdf?sequence=3&isAllowed=y"
                                         class="main-link">Centro de gestión de contenido en RDF</a>
                                 </div>
                                 <div>
-                                    <a href="#https://addi.ehu.es/bitstream/handle/10810/15911/Wikipedia%20eta%20Anbiguetate%20Lexikala.pdf?sequence=3&isAllowed=y"
+                                    <a href="https://addi.ehu.es/bitstream/handle/10810/15911/Wikipedia%20eta%20Anbiguetate%20Lexikala.pdf?sequence=3&isAllowed=y"
                                         class="main-link">Wikipedia eta anbiguetate lexikala</a>
                                 </div>
                                 <div>
-                                    <a href="#https://addi.ehu.es/bitstream/handle/10810/13333/Memoria.pdf?sequence=2&isAllowed=y"
+                                    <a href="https://addi.ehu.es/bitstream/handle/10810/13333/Memoria.pdf?sequence=2&isAllowed=y"
                                         class="main-link">Sindarren informe sortzailea</a>
                                 </div>
                                 <div>
-                                    <a href="#https://addi.ehu.es/handle/10810/13143/recent-submissions?offset=16"
+                                    <a href="https://addi.ehu.es/handle/10810/13143/recent-submissions?offset=16"
                                         class="small-link">Adibide gehiago</a>
                                 </div>
                             </td>
