--- a/pages/ing_informatikoa.html
+++ b/pages/ing_informatikoa.html
@@ -62,7 +62,17 @@
             <!-- Informazioa Section -->
             <div class="tab-pane fade show active" id="informazioa" role="tabpanel" aria-labelledby="informazioa-tab">
                 <h4>Informazioa</h4>
-                <p>Hemen Ingeniaritza Informatikoko GrALari buruzko informazioa agertuko da.</p>
+                <p>
+                    <strong>Gradu Amaierako Lanaren Araudiaren Puntu Garrantzitsuenak:</strong>
+                </p>
+                <ul>
+                    <li><strong>Helburua eta izaera:</strong> GRALa banakako proiektu bat da, ikasleek graduko trebetasunak eta ezagutzak aplikatzeko.</li>
+                    <li><strong>Jabetza intelektuala:</strong> GRALaren eskubideak ikasleari dagozkio, baina ADDIn argitaratzeko aukera dago.</li>
+                    <li><strong>Matrikula:</strong> Matrikulak urtean bi deialdi eskaintzen ditu; lanak defendatzen ez badira, berriro matrikulatu behar da.</li>
+                    <li><strong>Memoria eta defentsa:</strong> GRAL memoria 60 orrialde ingurukoa izan behar da. Defentsa publikoa eta epaimahaiaren aurrean egingo da.</li>
+                    <li><strong>Epaimahaia eta kalifikazioa:</strong> Epaimahaiak hiru kide ditu, eta kalifikazioa 0-10 eskalan ematen da. Ohorezko matrikulak %5en artean daude.</li>
+                    <li><strong>Jasangarritasuna:</strong> GRALek jasangarritasuna, giza eskubideak, eta balio demokratikoak aztertzeko gogoeta bat izan behar dute.</li>
+                </ul>
             </div>
 
             <!-- Memoriak Section -->
