--- a/pages/inteligentzia_artifiziala.html
+++ b/pages/inteligentzia_artifiziala.html
@@ -62,7 +62,16 @@
             <!-- Informazioa Section -->
             <div class="tab-pane fade show active" id="informazioa" role="tabpanel" aria-labelledby="informazioa-tab">
                 <h4>Informazioa</h4>
-                <p>Hemen Inteligentzia Artifizialeko GrALari buruzko informazioa agertuko da.</p>
+                <p><strong>Adimen Artifizialaren Gradu Amaierako Lanaren Araudi Orokorraren Puntu Garrantzitsuenak:</strong></p>
+                <ul>
+                    <li><strong>Definizioa:</strong> GRALa ikasleak bakarka egiten duen lana da, graduko ezagutzak eta gaitasunak integratzeko eta aplikatzeko helburuarekin.</li>
+                    <li><strong>Jabetza intelektuala:</strong> Lanaren eskubideak ikasleari dagozkio, baina EHUk lana argitaratzeko eskubidea izan dezake ADDIren bidez.</li>
+                    <li><strong>Ondorio etikoak:</strong> Etika Zerbitzuaren edo Etika Batzordearen onespena beharrezkoa da ondorio etikoak dituzten lanetan.</li>
+                    <li><strong>Helburuak:</strong> GRALa graduan lortutako gaitasunak sendotzera eta ikasleak arazoak aztertzeko eta konpontzeko trebetasunak garatzera bideratuta dago.</li>
+                    <li><strong>Matrikula eta deialdiak:</strong> Ikasleek GRALa egiteko ikasturteko bi deialdi dituzte, defendatu ezean berriro matrikulatuz.</li>
+                    <li><strong>Defentsa:</strong> Defentsa publikoa da, epaimahai batek ebaluatzen du, eta kalifikazioa 0-10 eskalan ematen da.</li>
+                    <li><strong>Edukia:</strong> Memoria bat entregatu behar da, 60 orrialde ingurukoa izatea gomendatzen da, eranskinak kanpo.</li>
+                </ul>
             </div>
 
             <!-- Memoriak Section -->
