--- a/pages/ing_informatikoa.html
+++ b/pages/ing_informatikoa.html
@@ -10,6 +10,8 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
+
 
 </head>
 <body>
@@ -26,7 +28,6 @@
     <div id="sidebar">
         <span class="close-btn">&times;</span>
         <div class="list-group list-group-flush">
-            <a href="../index.html" class="list-group-item list-group-item-action">Hasiera</a>
             <a href="../pages/informazio_orokorra.html" class="list-group-item list-group-item-action">Informazio Orokorra</a>
             <a href="ingeniaritza-informatikoa.html" class="list-group-item list-group-item-action active">Ingeniaritza Informatikoa</a>
             <a href="../pages/inteligentzia_artifiziala.html" class="list-group-item list-group-item-action">Inteligentzia Artifiziala</a>
