--- a/pages/informazio_orokorra.html
+++ b/pages/informazio_orokorra.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/styles.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
+
 </head>
 <body>
     <!-- Navbar -->
@@ -21,7 +23,6 @@
     <div id="sidebar">
         <span class="close-btn">&times;</span>
         <div class="list-group list-group-flush">
-            <a href="../index.html" class="list-group-item list-group-item-action">Hasiera</a>
             <a href="../pages/informazio_orokorra.html" class="list-group-item list-group-item-action active">Informazio Orokorra</a>
             <a href="../pages/ing_informatikoa.html" class="list-group-item list-group-item-action">Ingeniaritza Informatikoa</a>
             <a href="../pages/inteligentzia_artifiziala.html" class="list-group-item list-group-item-action">Inteligentzia Artifiziala</a>
